test/integration/semantic/operations51.pal
{18,19,20,21,23,25}
{
    Test that operations work
}
program test(input, output);
const
	foo = 'Party time aafter 415!!';
	bar = 'Shorter string';
type
	colour = (red,green,blue);
var
	i : integer;
	b : Boolean;
	r : real;
	c : colour;
begin
	// equality
	b := foo >= i;	// error
	b := foo >= b;	// error
	b := foo >= r;	// error
	b := foo >= c;	// error
	b := foo >= foo;	
	b := foo >= bar;	// error

	i := i >= i;	// error
end.
